fix inserimento nuovo prodotto con aggiunta del campo posizioni (referenziato) dal form com thymeleaf

--- a/src/main/resources/templates/prodotti/create.html
+++ b/src/main/resources/templates/prodotti/create.html
@@ -17,6 +17,9 @@
         <label> prezzo </label>
         <input type="number" th:field="*{prezzo}"/><br/>
 
+        <label> posizione </label>
+        <input type="number" th:field="*{posizione.id}"/><br/>
+
         <button type="submit">Register</button>
     </form>
 </div>
